versions/v0.12/modules/en/pages/explanations/concepts.adoc
= Core Concepts
:revdate: 2025-07-23
:page-revdate: {revdate}

{product_name} is fundamentally a set of Kubernetes custom resource definitions (CRDs) and controllers
to manage GitOps for a single Kubernetes cluster or a large-scale deployment of Kubernetes clusters.

[IMPORTANT]
====

For more on the naming conventions of CRDs, click xref:troubleshooting.adoc#_naming_conventions_for_crds[Naming conventions for CRDs].
====

Below are some of the concepts of {product_name} that will be useful throughout this documentation:

* *{product_name} Manager*: The centralized component that orchestrates the deployments of Kubernetes assets
  from git. In a multi-cluster setup, this will typically be a dedicated Kubernetes cluster. In a
  single cluster setup, the {product_name} manager will be running on the same cluster you are managing with GitOps.
* *{product_name} controller*: The controller(s) running on the {product_name} manager orchestrating GitOps. In practice,
  the {product_name} manager and {product_name} controllers are used fairly interchangeably.
* *Single Cluster Style*: This is a style of installing {product_name} in which the manager and downstream cluster are the
  same cluster.  This is a very simple pattern to quickly get up and running with GitOps.
* *Multi Cluster Style*: This is a style of running {product_name} in which you have a central manager that manages a large
  number of downstream clusters.
* *{product_name} agent*: Every managed downstream cluster will run an agent that communicates back to the {product_name} manager.
  This agent is just another set of Kubernetes controllers running in the downstream cluster.
* *GitRepo*: Git repositories that are watched by {product_name} are represented by the type `GitRepo`.

____
*Example installation order via `GitRepo` custom resources when using {product_name} for the configuration management of downstream clusters:*

. Install https://github.com/projectcalico/calico[Calico] CRDs and controllers.
. Set one or multiple cluster-level global network policies.
. Install https://github.com/open-policy-agent/gatekeeper[GateKeeper]. Note that *cluster labels* and *overlays* are critical features in {product_name} as they determine which clusters will get each part of the bundle.
. Set up and configure ingress and system daemons.
____

* *HelmOp*: Helm charts deployed directly from a Helm repository or OCI registry, without a git
  repository, are represented by the type `HelmOp`.
 ** For more details, click xref:how-tos-for-users/helm-ops.adoc[HelmOps].
* *Bundle*: An internal unit used for the orchestration of resources from git.
  When a `GitRepo` is scanned it will produce one or more bundles. Bundles are a collection of
  resources that get deployed to a cluster. `Bundle` is the fundamental deployment unit used in{product_name}. The
  contents of a `Bundle` may be Kubernetes manifests, Kustomize configuration, or Helm charts.
  Regardless of the source the contents are dynamically rendered into a Helm chart by the agent
  and installed into the downstream cluster as a helm release.
 ** To see the *life cycle of a bundle*, click xref:explanations/ref-bundle-stages.adoc[bundle lifecycle].
* *BundleDeployment*: When a `Bundle` is deployed to a cluster an instance of a `Bundle` is called a `BundleDeployment`.
  A `BundleDeployment` represents the state of that `Bundle` on a specific cluster with its cluster specific
  customizations. The {product_name} agent is only aware of `BundleDeployment` resources that are created for
  the cluster the agent is managing.
 ** For an example of how to deploy Kubernetes manifests across clusters using {product_name} customization, click xref:how-tos-for-users/gitrepo-targets.adoc#_customization_per_cluster[customization per cluster].
* *Downstream Cluster*: Clusters to which {product_name} deploys manifests are referred to as downstream clusters. In the single cluster use case, the {product_name} manager Kubernetes cluster is both the manager and downstream cluster at the same time.
* *Cluster Registration Token*: Tokens used by agents to register a new cluster.
